# cmake

./: calculate  division.cpp  makefile  print_result.h
LinuxExample/: main.cpp
Module1/LinuxExample/: addition.cpp
Module2/Managing_Header_files/: CMakeLists.txt
Module2/Managing_Header_files/mathLib/: CMakeLists.txt
Module2/Managing_Header_files/mathLib/src/: addition.cpp  division.cpp
Module2/Managing_Header_files/printLib/: CMakeLists.txt
Module2/Managing_Header_files/printLib/src/: print_result.cpp
Module2/Sub_directories/: CMakeLists.txt  main.cpp
Module2/Sub_directories/mathLib/: CMakeLists.txt
Module2/Sub_directories/printLib/: print_result.cpp
Module3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Module5/Functions/: CMakeLists.txt
Module5/LoopingCommands/: CMakeLists.txt
Module5/Macros/: CMakeLists.txt
Module5/Scopes/: CMakeLists.txt
Module5/if_block/: CMakeLists.txt
Module5/optional_Args/: CMakeLists.txt
Module6/cache_Variables/: CMakeLists.txt
Module7/LinkingExternal_libraries/: CMakeLists.txt
